tests/baselines/reference/derivedClassWithoutExplicitConstructor.errors.txt
derivedClassWithoutExplicitConstructor.ts(11,9): error TS2554: Expected 1 arguments, but got 0.
derivedClassWithoutExplicitConstructor.ts(24,9): error TS2554: Expected 1 arguments, but got 0.


==== derivedClassWithoutExplicitConstructor.ts (2 errors) ====
    class Base {
        a = 1;
        constructor(x: number) { this.a = x; }
    }
    
    class Derived extends Base {
        x = 1
        y = 'hello';
    }
    
    var r = new Derived(); // error
            ~~~~~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 derivedClassWithoutExplicitConstructor.ts:3:17: An argument for 'x' was not provided.
    var r2 = new Derived(1); 
    
    class Base2<T> {
        a: T;
        constructor(x: T) { this.a = x; }
    }
    
    class D<T extends Date> extends Base2<T> {
        x = 2
        y: T = null;
    }
    
    var d = new D(); // error
            ~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 derivedClassWithoutExplicitConstructor.ts:16:17: An argument for 'x' was not provided.
    var d2 = new D(new Date()); // ok